Table account{
  account_id integer [pk]
  name VARCHAR(50)
  last_name VARCHAR(50)
  email VARCHAR(255) [unique, not null]
  password_hash VARCHAR(255) [not null]
  pseudo VARCHAR(30) [unique, not null]
  profile_photo_url VARCHAR(255)
  created_at timestamp [not null]
  updated_at timestamp [not null]
  games_played integer [not null, default: 0]
  games_won integer [not null, default: 0]
  games_lost integer [not null, default: 0]
  personal_best integer [not null, default: 0]
  is_deleted boolean 
}

Table game{
  game_id integer [pk]
  players_count integer [not null]
  played_at timestamp [not null]
  winner_id integer [not null, ref:> account.account_id]
}

Table game_player{
  game_player_id integer [pk]
  game_id integer [not null, ref: > game.game_id]
  account_id integer [not null, ref: > account.account_id]
  score integer [not null]
  placement integer
  
  indexes {
    (game_id, account_id) [unique]
  }
}

Table friendship{
  account_2_id integer [not null, ref: > account.account_id]
  account_1_id integer [not null, ref: > account.account_id]
  created_at datetime
  indexes {
    (account_1_id, account_2_id) [pk]
  }
}

Table blocking{
  account_blocker_id integer [not null, ref: > account.account_id]
  account_blocked_id integer [not null, ref: > account.account_id]
  indexes {
    (account_blocker_id, account_blocked_id) [pk]
  }
}

table conversation{
  conversation_id integer [pk]
  account_id_1 integer [ref: > account.account_id]
  account_id_2 integer [ref: > account.account_id]
  created_at datetime [not null]
}

table message {
  message_id integer [pk]
  conversation_id integer [not null, ref: > conversation.conversation_id]
  sender_id integer [not null, ref: > account.account_id]
  content text [not null]
  is_read boolean
  send_at datetime
  read_at datetime
}

table notification{
  notification_id integer [pk]
  notification_type varchar(50) [not null, note: 'enum: message, friend_request, game_invite']
  sender_type varchar(50) [not null, note: 'enum: friend, moderation, newsletter']
  is_read boolean [not null]
  created_at datetime [not null]
  read_at datetime
  sender_id integer [not null, ref: > account.account_id]
  receiver_id integer [not null, ref: > account.account_id]
}
